# weon-assignment

./: .gitignore  PLANS.md  README.md  cases.json  pyproject.toml  spec.md
.github/workflows/: ci.yml
experiments/: D01-baseline.md
prompts/: baseline.txt
src/weon_eval/: __init__.py  __main__.py  cases.py  openrouter.py  prompts.py  runner.py
tests/: test_cases.py  test_cli.py  test_openrouter.py  test_prompts.py  test_runner.py
