[project]
name = "weon-garment-eval"
version = "0.1.0"
description = "Small experiment runner for garment-consistency evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28,<1",
]

[project.scripts]
weon-eval = "weon_eval.__main__:main"

[dependency-groups]
dev = [
  "build>=1.2,<2",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weon_eval"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
